WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221642
WebCore::createBusFromInMemoryAudioFile() may crash under ExtAudioFileRead()
https://bugs.webkit.org/show_bug.cgi?id=221642
Summary
WebCore::createBusFromInMemoryAudioFile() may crash under ExtAudioFileRead()
Chris Dumez
Reported
2021-02-09 17:05:54 PST
WebCore::createBusFromInMemoryAudioFile() may crash under ExtAudioFileRead(): 6 libAudioToolboxUtility.dylib: CrashIfClientProvidedBogusAudioBufferList <== 6 AudioToolboxCore: ExtAudioFileRead 6 WebCore: WebCore::createBusFromInMemoryAudioFile(void const*, unsigned long, bool, float) 6 WebCore: WebCore::AudioBuffer::createFromAudioFileData(void const*, unsigned long, bool, float) 6 WebCore: WTF::Detail::CallableWrapper<WebCore::AsyncAudioDecoder::AsyncAudioDecoder()::$_0, void>::call() 6 JavaScriptCore: WTF::Thread::entryPoint(WTF::Thread::NewThreadContext*) 6 JavaScriptCore: WTF::wtfThreadEntryPoint(void*) 6 libsystem_pthread.dylib: _pthread_start 6 libsystem_pthread.dylib:
Attachments
Patch
(19.10 KB, patch)
2021-02-09 17:17 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2021-02-09 17:06:08 PST
<
rdar://72789841
>
Chris Dumez
Comment 2
2021-02-09 17:17:51 PST
Created
attachment 419789
[details]
Patch
Geoffrey Garen
Comment 3
2021-02-09 20:51:31 PST
Comment on
attachment 419789
[details]
Patch r=me
EWS
Comment 4
2021-02-10 12:34:27 PST
Committed
r272678
: <
https://commits.webkit.org/r272678
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 419789
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug