WebCore::createBusFromInMemoryAudioFile() may crash under ExtAudioFileRead() https://bugs.webkit.org/show_bug.cgi?id=221642 <rdar://72789841>

Reviewed by Geoffrey Garen.

The crash seems to indicate we are passing an AudioBufferList to ExtAudioFileRead()
that contains a null buffer. It is not obvious how this is happening but I have made
the following changes:
1. createAudioBufferList() / destroyAudioListBuffer() implementation is now shared
   on both macOS and iOS. The implementation now uses fastCalloc and returns null
   in case of failure to allocate.
2. createAudioBufferList() was renamed to tryCreateAudioBufferList() to make it clear
   it can return null. All call sites now properly deal with tryCreateAudioBufferList()
   potentially return null
3. Add a new validateAudioBufferList() function which makes sure that the AudioBufferList
   we are about to pass to ExtAudioFileRead() does not contain any null buffer. In case
   of validation failure, we log an error, generate a simulated crash log and early return
   gracefully instead of crashing later on.
4. Added more assertions to help catch bugs.

* SourcesCocoa.txt:
* WebCore.xcodeproj/project.pbxproj:
* platform/audio/cocoa/AudioFileReaderCocoa.cpp: Added.
(WebCore::tryCreateAudioBufferList):
(WebCore::destroyAudioBufferList):
(WebCore::validateAudioBufferList):
* platform/audio/cocoa/AudioFileReaderCocoa.h: Added.
* platform/audio/ios/AudioFileReaderIOS.cpp:
(WebCore::AudioFileReader::createBus):
(WebCore::createAudioBufferList): Deleted.
(WebCore::destroyAudioBufferList): Deleted.
* platform/audio/mac/AudioFileReaderMac.cpp:
(WebCore::AudioFileReader::createBus):
(WebCore::createAudioBufferList): Deleted.
(WebCore::destroyAudioBufferList): Deleted.


Canonical link: https://commits.webkit.org/233929@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272678 268f45cc-cd09-0410-ab3c-d52691b4dbfc